--- a/Practica.html
+++ b/Practica.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to our menu!</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
     <li><a href="/">Home</a></li>
